syntax="proto3";
package services;
option go_package ="./;pb";

message ProductModel{
  // @inject_tag: json:"id" form:"id"
  int32 id = 1;
  // @inject_tag: json:"name" form:"name"
  string name = 2;
  // @inject_tag: json:"price" form:"price"
  double price = 3;
  // @inject_tag: json:"introduction" form:"introduction"
  string introduction = 4;
  // @inject_tag: json:"note" form:"note"
  string note = 5;
  // @inject_tag: json:"producer_id" form:"producer_id"
  int32 producer_id = 6;//供应商外码
}

message ProductInsertRequest{

}

message ProductInsertResponse{

}

message ProductSelectRequest{

}

message ProductSelectResponse{

}

message ProductDeleteRequest{

}

message ProductDeleteResponse{

}

message ProductUpdateRequest{

}

message ProductUpdateResponse{

}


